--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 #----------------------------------------------------------------------------
 # Add the executable, and link it to the Geant4 libraries
 #
-add_executable(${name} ${name}.cc ${sources} ${headers})
+add_executable(${name} ${name}.cc ${sources} ${headers} include/RadioisotopeEnergySpectrum.h src/RadioisotopeEnergySpectrum.cpp)
 target_link_libraries(${name} ${Geant4_LIBRARIES})
 
 #----------------------------------------------------------------------------
